	- Remove inaccurate default listed for -Q/--quotestr. (DLR)
  do_tab()
	- Remove unneeded variable kbinput. (DLR)
  do_int_spell_fix()
	- Display highlighted misspelled words using display_string(),
	  as do_replace_loop() does. (DLR)
  do_alt_speller()
	- Replace a set_modified() with SET(MODIFIED) to avoid an
	  unnecessary update, and remove an unneeded clearok(FALSE).
	  (DLR)
  do_spell()
	- If the spell-checker printed any error messages onscreen, call
	  total_redraw() to make sure they're cleared off. (DLR, found
	  by CHAO Wei-Lun)
  do_output()
	- Properly allow wrapping when we insert a tab, for consistency.
	  (DLR)
	- Don't set current_len until after it's been asserted that both
	  current and current->data aren't NULL. (DLR)
  disable_extended_input()
	- Disable extended output processing as well as extended input
	  processing, and rename to disable_extended_io(). (DLR)
- nano.h:
	- Add macro charset(), a wrapper that calls memset(). (DLR)
	- Readd #defines for the isblank() and iswblank() equivalents.
	  (DLR)
- proto.h:
	- Add missing NANO_SMALL and HAVE_REGEX_H #ifdefs around the
	  do_find_bracket() prototype. (DLR)
- rcfile.c:
  color_to_int()
	- Since colorname's being NULL is handled elsewhere now, assert
	  that it isn't NULL at the beginning of the function. (DLR)
  parse_colors()
	- Properly parse a background color without a foreground color.
	  (DLR)
	- Properly generate an error if we get a color directive without
	  a regex string. (DLR)
  parse_rcfile()
	- Properly generate an error if we get an invalid multibyte
	  string for an option, instead of working around it. (DLR)
	- Use has_blank_mbchars() to check for blank characters in the
	  "punct" and "brackets" options, and clarify the error message
	  displayed when we find blank characters. (DLR)
- search.c:
  do_gotoline()
	- Properly show an error message if we try to go to line 0,
	  since the first line in the file is 1. (DLR)